--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2 class="conteudo-principal-escrito-subtitulo">Deixe a sua comunidade segura de um jeito fácil</h2>
         <button class="conteudo-principal-escrito-botao">Me adicione</button>
       </div>
-      <img class="conteudo-principal-imagem" src="/ballebot.svg" alt="ballebot">
+      <img class="conteudo-principal-imagem" src="./ballebot.svg" alt="ballebot">
     </section>
 
     <section class="conteudo-secundario">
@@ -45,7 +45,7 @@
   </main>
 
   <footer class="rodape">
-    <img class="rodape-imagem" src="/ballerini.svg" alt="ballerini">
+    <img class="rodape-imagem" src="./ballerini.svg" alt="ballerini">
   </footer>
 </body>
 
